--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -76,9 +76,9 @@
     .home-main-div {
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
       width: 100%;
+      min-height: 100vh;
     }
 
     .home-mb-div {
