--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -134,6 +134,13 @@
     outline: none;
   }
   
+  .password-div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+  
   .inputPassword {
     font-size: 14px;
     height: 20px;
@@ -175,6 +182,17 @@
 
     .label {
       color: #d7dfe9;
+    }
+
+    .inputUserName {
+      width: 195px;
+    }
+
+    .password-div {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 200px;
     }
   }
 
